--- a/platformio.ini
+++ b/platformio.ini
@@ -7,9 +7,10 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
 ;[platformio]
-;lib_dir = /Applications/Arduino.app/Contents/Java/hardware/arduino/avr/libraries/
+;lib_dir = /home/pbeeken/Documents/ArduinoCustomLibs
+
 [common]
-lib_deps_builtin = Wire
+lib_deps_builtin = Wire,Streaming
 
 
 [env:uno]
