Massive refactoring that never got pushed.

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,4 +18,4 @@ platform = atmelavr
 board = uno
 framework = arduino
 monitor_speed = 115200
-
+; The future? https://github.com/GreyGnome/EnableInterrupt
